<resources>
    <string name="app_name">listeatapp</string>

    <!-- Navigation Menu -->
    <string name="navigation_view_header_title">ListEat App</string>
    <string name="nav_menu_item_glist">ניהול רשימות</string>
    <string name="nav_menu_item_statistics">סטטיסטיקה</string>
    <string name="nav_menu_item_settings">הגדרות</string>
    <string name="nav_menu_item_logout">התנתקות</string>

    <!--GList Fragment-->
    <string name="glist_item_quantity_label">יח</string>
    <string name="glist_item_weight_label">גרם</string>
    <string name="glist_total_items">סך הכל מוצרים:</string>
    <string name="glist_purchase">בצע קנייה</string>
    <string name="glist_purchase_made_message">המוצרים נשמרו כקנייה</string>
    <string name="glist_purchase_sure">האם לבצע את הקנייה?</string>
    <string name="glist_purchase_sure_yes">כן</string>
    <string name="glist_purchase_sure_no">לא</string>

    <!--Add/Edit GItem Fragment-->
    <string name="gitem_product_label">מוצר:</string>
    <string name="gitem_quantity_label">כמות</string>
    <string name="gitem_weight_label">משקל</string>
    <string name="gitem_comments_label">הערות:</string>
    <string name="gitem_save_create">הוסף</string>
    <string name="gitem_save_edit">שמור</string>
    <string name="gitem_delete">מחק</string>
    <string name="gitem_tooltip_product_autocomplete">הקלד מוצר</string>
    <string name="gitem_header_title_add">הוספת מוצר</string>
    <string name="gitem_header_title_edit">עריכת מוצר</string>
    <string name="gitem_weight_hint">גרם</string>
    <string name="gitem_item_added_success">המוצר התווסף לרשימה</string>
    <string name="gitem_item_updated_success">המוצר עודכן</string>
    <string name="gitem_item_deleted_success">המוצר הוסר</string>
    <string name="gitem_missing_product">יש לבחור מוצר</string>
    <string name="gitem_missing_weight">יש להזין משקל</string>
    <string name="gitem_add_product_btn_text">+</string>

    <!-- Product Fragment-->
    <string name="product_category_label">קטגוריה</string>
    <string name="product_tooltip_category_autocomplete">בחר קטגוריה</string>
    <string name="product_description_label">תיאור:</string>
    <string name="product_name_label">שם המוצר:</string>
    <string name="product_added_success">המוצר החדש נוצר</string>
    <string name="product_header_title_add">יצירת מוצר חדש</string>
    <string name="product_image_choose_label">צלם תמונה (אופציונלי)</string>

    <!-- GListManage fragment -->
    <string name="glist_manage_title">ניהול רשימות</string>
    <string name="glist_manage_item_deleted">הוסרת מהרשימה</string>
    <string name="glist_manage_item_delete_sure">האם להסיר אותך מרשימה זו?</string>
    <string name="glist_manage_item_delete_sure_yes">כן</string>
    <string name="glist_manage_item_delete_sure_no">לא</string>

    <!-- GListEdit Fragment-->
    <string name="glist_edit_title_add">יצירת רשימת קניות</string>
    <string name="glist_edit_title_edit">עריכת פרטי רשימת קניות</string>
    <string name="glist_edit_subject_label">נושא:</string>
    <string name="glist_edit_description_label">תיאור:</string>
    <string name="glist_edit_save_btn_text">צור</string>
    <string name="glist_edit_edit_btn_text">שמור</string>
    <string name="glist_edit_user_label">הוסף משתמש לרשימה</string>
    <string name="glist_edit_user_autocomplete">הקלד אימייל</string>
    <string name="glist_edit_added_success">רשימת הקניות נוצרה</string>
    <string name="glist_edit_edited_success">השינויים נשמרו</string>
    <string name="glist_edit_no_subject">יש להקליד נושא רשימה</string>

    <!-- Settings Fragment-->
    <string name="settings_server_ip_label">כתובת שרת</string>
    <string name="settings_save_button_label">שמור</string>
    <string name="settings_title_add">הגדרות</string>
    <string name="settings_saved_text">ההגדרות נשמרו</string>

    <!-- Stats Fragment-->
    <string name="stats_title">סטטיסטיקה</string>
    <string name="stats_group_by_text">התפלגות קניות לפי קטגוריות בחודש האחרון</string>
    <string name="stats_no_data">לא קיימות קניות שמורות בחודש האחרון</string>

    <!-- Login Fragment -->
    <string name="login_btn_text">התחברות</string>
    <string name="settings_btn_text">הגדרות</string>
    <string name="login_title">List Eat</string>
    <string name="login_failed_message">ההתחברות נכשלה. בדוק חיבור אינטרנט.</string>

    <!-- Auth0 settings -->
    <string name="com_auth0_client_id">jxVU5ebvBDQxVgWE1h4PAaR71iCKV9h2</string>
    <string name="com_auth0_domain">listeat.eu.auth0.com</string>
</resources>
