<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:labelFor="@+id/autoCompleteProduct"
        android:text="@string/gitem_product_label"
        android:textSize="24sp" />


    <AutoCompleteTextView
        android:id="@+id/autoCompleteProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
        android:hint="@string/gitem_tooltip_product_autocomplete"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioQuantityWeight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <RadioButton
            android:id="@+id/radioQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gitem_quantity_label" />

        <RadioButton
            android:id="@+id/radioWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/gitem_weight_label" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        >

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/gitem_weight_hint"
            android:inputType="numberSigned"
            android:layoutDirection="rtl"
            android:visibility="gone" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/editQuantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            app:np_dividerColor="@color/colorPrimary"
            app:np_max="30"
            app:np_min="1"
            app:np_orientation="horizontal"
            app:np_selectedTextColor="@color/colorPrimary"
            app:np_textColor="@color/colorPrimary"
            app:np_value="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/editComments"
        android:text="@string/gitem_comments_label" />

    <EditText
        android:id="@+id/editComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        >
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/gitem_save_create" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/gitem_delete"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>

