<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:paddingRight="10dp"
    android:paddingLeft="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:labelFor="@+id/editSubject"
        android:text="@string/glist_edit_subject_label" />

    <EditText
        android:id="@+id/editSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:labelFor="@+id/editDescription"
        android:text="@string/glist_edit_description_label" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/tvUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/autoCompleteUser"
        android:text="@string/glist_edit_user_label"
        android:textSize="18sp"
        />


    <AutoCompleteTextView
        android:id="@+id/autoCompleteUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/glist_edit_user_autocomplete"
        android:layoutDirection="rtl"
        android:textDirection="rtl"
         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/glist_edit_save_btn_text" />
    </LinearLayout>
</LinearLayout>

