<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:paddingRight="10dp"
    android:paddingLeft="30dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"

        android:gravity="center"
        android:textSize="40sp"
        />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layoutDirection="rtl"
        android:text="@string/login_btn_text" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layoutDirection="rtl"
        android:text="@string/settings_btn_text" />
</LinearLayout>

